Update jupyter notebooks after .md conversion

--- a/2018-02-10-Tucson/Python/01-run-quit.ipynb
+++ b/2018-02-10-Tucson/Python/01-run-quit.ipynb
@@ -4,33 +4,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "title: \"Running and Quitting\"\n",
-    "teaching: 15\n",
-    "exercises: 0\n",
-    "questions:\n",
-    "- \"How can I run Python programs?\"\n",
-    "objectives:\n",
-    "- \"Launch the Jupyter Notebook, create new notebooks, and exit the Notebook.\"\n",
-    "- \"Create Markdown cells in a notebook.\"\n",
-    "- \"Create and run Python cells in a notebook.\"\n",
-    "keypoints:\n",
-    "- \"Python programs are plain text files.\"\n",
-    "- \"Use the Jupyter Notebook for editing and running Python.\"\n",
-    "- \"The Notebook has Control and Edit modes.\"\n",
-    "- \"Use the keyboard and mouse to select and edit cells.\"\n",
-    "- \"The Notebook will turn Markdown into pretty-printed documentation.\"\n",
-    "- \"Markdown does most of what HTML does.\"\n",
-    "---\n",
+    "Running and Quitting\n",
+    "==\n",
+    "Teaching: 15  \n",
+    "Exercises: 10\n",
+    "\n",
+    "### Questions:\n",
+    " * How can I run Python programs?\n",
+    "\n",
+    " Objectives:\n",
+    " * Launch the Jupyter Notebook, create new notebooks, and exit the Notebook.\n",
+    " * Create Markdown cells in a notebook.\n",
+    " * Create and run Python cells in a notebook.\n",
+    "\n",
+    "### Keypoints:\n",
+    " * Python programs are plain text files.\n",
+    " * Use the Jupyter Notebook for editing and running Python.\n",
+    " * The Notebook has Control and Edit modes.\n",
+    " * Use the keyboard and mouse to select and edit cells.\n",
+    " * The Notebook will turn Markdown into pretty-printed documentation.\n",
+    " * Markdown does most of what HTML does.\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Python programs are plain text files.\n",
     "\n",
-    "*   They have the \".py\" extension to let everyone (including the operating system) \n",
+    "*   They have the `.py` extension to let everyone (including the operating system) \n",
     "    know it is a Python program.\n",
     "    *   This is convention, not a requirement.\n",
-    "*   It's common to write them using a text editor but we are going to use the Jupyter Notebook.\n",
+    "*   It's common to write them using a text editor but we are going to use the [Jupyter Notebook](http://jupyter.org/])\n",
     "*   The bit of extra setup is well worth it because the Notebook provides code completion \n",
     "    and other helpful features.\n",
-    "*   Notebook files have the extension \".ipynb\" to distinguish them from plain-text Python programs.\n",
+    "*   Notebook files have the extension `.ipynb` to distinguish them from plain-text Python programs.\n",
     "\n",
     "## Use the Jupyter Notebook for editing and running Python.\n",
     "\n",
@@ -38,25 +47,11 @@
     "    *   See [the setup instructions]({{ site.github.url }}/setup/) for Anaconda installation \n",
     "        instructions.\n",
     "*   It also installs all the extra libraries it needs to run.\n",
-    "*   Once you have installed Python and the Jupyter Notebook requirements, open a shell and type:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "*   Once you have installed Python and the Jupyter Notebook requirements, open a shell and type:\n",
     "~~~\n",
     "$ jupyter notebook\n",
     "~~~\n",
-    "{: .source}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "\n",
     "*   This will start a Jupyter Notebook server and open your default web browser. \n",
     "*   The server runs locally on your machine only and does not use an internet connection.\n",
     "*   The server sends messages to your browser.\n",
@@ -75,16 +70,26 @@
     "*   Just like a webpage, the saved notebook looks different to what you see when \n",
     "    it gets rendered by your browser.\n",
     "\n",
-    "FIXME: diagram\n",
-    "\n",
+    "### FIXME: diagram"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "> ## How It's Stored\n",
     ">\n",
     "> *   The notebook file is stored in a format called JSON.\n",
     "> *   Just like a webpage, what's saved looks different from what you see in your browser.\n",
     "> *   But this format allows Jupyter to mix software (in several languages) with documentation \n",
     "      and graphics, all in one file.\n",
-    "{: .callout}\n",
-    "\n",
+    "{: .callout}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## The Notebook has Control and Edit modes.\n",
     "\n",
     "*   Open a new notebook from the dropdown menu in the top right corner of the file browser page.\n",
@@ -111,8 +116,13 @@
     "    *   The \"X\" key will delete the current cell.\n",
     "*   There are lots of shortcuts you can try out and most actions can be \n",
     "    done with the menus at the top of the page if you forget the shortcuts.\n",
-    "*   If you remember the \"esc\" and \"H\" shortcut, you will be able to find out all the rest.\n",
-    "\n",
+    "*   If you remember the \"esc\" and \"H\" shortcut, you will be able to find out all the rest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Use the keyboard and mouse to select and edit cells.\n",
     "\n",
     "*   Pressing the \"return\" key turns the surround green to \n",
@@ -123,8 +133,13 @@
     "*   We need some other way to tell the Notebook we want to run what's in the cell.\n",
     "*   Pressing the \"return\" key and the \"shift\" key together will execute the contents of the cell.\n",
     "*   Notice that the \"return\" and \"shift\" keys on the \n",
-    "    right of the keyboard are right next to each other.\n",
-    "\n",
+    "    right of the keyboard are right next to each other."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## The Notebook will turn Markdown into pretty-printed documentation.\n",
     "\n",
     "*   Notebooks can also render [Markdown][markdown].\n",
@@ -136,8 +151,13 @@
     "*   `In [ ]:` will disappear to show it is no longer a code cell\n",
     "    and you will be able to write in Markdown.\n",
     "*   Turn the current cell into a Code cell\n",
-    "    by entering the control mode (esc/gray) and press the \"Y\" key.\n",
-    "\n",
+    "    by entering the control mode (esc/gray) and press the \"Y\" key."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Markdown does most of what HTML does.\n",
     "\n",
     "<div class=\"row\">\n",
@@ -145,10 +165,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "\\*   Use asterisksv  \n",
+    "\\*   to create  \n",
+    "\\*   bullet lists.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "*   Use asterisks\n",
     "*   to create\n",
@@ -159,24 +186,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "{: .source}\n",
-    "  </div>\n",
-    "  <div class=\"col-md-6\" markdown=\"1\">\n",
-    "*   Use asterisks\n",
-    "*   to create\n",
-    "*   bullet lists.\n",
-    "  </div>\n",
-    "</div>\n",
-    "\n",
-    "<div class=\"row\">\n",
-    "  <div class=\"col-md-6\" markdown=\"1\">"
+    "\"1.  Use numbers\"  \n",
+    "\"1.  to create\"  \n",
+    "\"1.  numbered lists.\"  "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "1.  Use numbers\n",
     "1.  to create\n",
@@ -184,26 +201,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "{: .source}\n",
-    "  </div>\n",
-    "  <div class=\"col-md-6\" markdown=\"1\">\n",
-    "1.  Use numbers\n",
-    "1.  to create\n",
-    "1.  numbered lists.\n",
-    "  </div>\n",
-    "</div>\n",
-    "\n",
-    "<div class=\"row\">\n",
-    "  <div class=\"col-md-6\" markdown=\"1\">"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# A Level-1 Heading"
@@ -213,21 +215,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "{: .source}\n",
-    "  </div>\n",
-    "  <div class=\"col-md-6\" markdown=\"1\">\n",
-    "# A Level-1 Heading\n",
-    "  </div>\n",
-    "</div>\n",
-    "\n",
-    "<div class=\"row\">\n",
-    "  <div class=\"col-md-6\" markdown=\"1\">"
+    "# A Level-1 Heading"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## A Level-2 Heading (etc.)"
@@ -237,22 +233,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "{: .source}\n",
-    "  </div>\n",
-    "  <div class=\"col-md-6\" markdown=\"1\">\n",
-    "## A Level-2 Heading (etc.)\n",
-    "  </div>\n",
-    "</div>\n",
-    "\n",
-    "<div class=\"row\">\n",
-    "  <div class=\"col-md-6\" markdown=\"1\">"
+    "## A Level-2 Heading (etc.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-5-35a200df7920>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-5-35a200df7920>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    Line breaks\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "Line breaks\n",
     "don't matter.\n",
@@ -265,47 +262,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "{: .source}\n",
-    "  </div>\n",
-    "  <div class=\"col-md-6\" markdown=\"1\">\n",
     "Line breaks\n",
     "don't matter.\n",
     "\n",
     "But blank lines\n",
-    "create new paragraphs.\n",
-    "  </div>\n",
-    "</div>\n",
-    "\n",
-    "<div class=\"row\">\n",
-    "  <div class=\"col-md-6\" markdown=\"1\">"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[Create links](http://software-carpentry.org) with `[...](...)`.\n",
-    "Or use [named links][data_carpentry].\n",
-    "\n",
-    "[links]: http://datacarpentry.org"
+    "create new paragraphs."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "{: .source}\n",
-    "  </div>\n",
-    "  <div class=\"col-md-6\" markdown=\"1\">\n",
+    "\"[Create links](http://software-carpentry.org) with `[...](...)`.\"\n",
+    "\"Or use [named links][data_carpentry].\"\n",
+    "\n",
+    "\"[links]: http://datacarpentry.org\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "[Create links](http://software-carpentry.org) with `[...](...)`.\n",
     "Or use [named links][data_carpentry].\n",
     "\n",
-    "[data_carpentry]: http://datacarpentry.org\n",
-    "  </div>\n",
-    "</div>\n",
-    "\n",
+    "[data_carpentry]: http://datacarpentry.org"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "> ## Creating Lists in Markdown\n",
     ">\n",
     "> Create a nested list in a Markdown cell in a notebook that looks like this:\n",
@@ -317,63 +311,93 @@
     ">     *   Analyze.\n",
     "> 3.  Write up.\n",
     "> 4.  Publish.\n",
-    "{: .challenge}\n",
+    ">\n",
+    ">>### Solution\n",
+    ">>This challenge integrates both the numbered list and bullet list. Note that the bullet list is indented 2 spaces so that it is inline with the items of the numbered list.\n",
+    ">>1.  Get funding.\n",
+    ">>1.  Do work.\n",
+    "    *   Design experiment.\n",
+    "    *   Collect data.\n",
+    "    *   Analyze.\n",
+    ">>1. Write up.\n",
+    ">>1. Publish.\n",
+    "\n",
     "\n",
     "> ## More Math\n",
     ">\n",
-    "> What is displayed when a Python cell in a notebook\n",
-    "> that contains several calculations is executed?\n",
-    "> For example, what happens when this cell is executed?\n",
+    "> What is displayed when a Python cell in a notebook that contains several calculations is executed? For example, what happens when this cell is executed?\n",
     ">\n",
     "> ~~~\n",
     "> 7 * 3\n",
     "> 2 + 1\n",
     "> ~~~\n",
-    "> {: .source}\n",
-    "{: .challenge}\n",
+    "\n",
     "\n",
     "> ## Change an Existing Cell from Code to Markdown\n",
     ">\n",
-    "> What happens if you write some Python in a code cell\n",
-    "> and then you switch it to a Markdown cell?\n",
-    "> For example,\n",
-    "> put the following in a code cell:\n",
+    "> What happens if you write some Python in a code cell and then you switch it to a Markdown cell? For example, put the following in a code cell:\n",
     ">\n",
     "> ~~~\n",
     "> x = 6 * 7 + 12\n",
     "> print(x)\n",
     "> ~~~\n",
-    "> {: .python}\n",
-    ">\n",
     "> And then run it with shift+return to be sure that it works as a code cell.\n",
-    "> Now go back to the cell and use escape+M to switch the cell to Markdown\n",
-    "> and \"run\" it with shift+return.\n",
-    "> What happened and how might this be useful?\n",
-    "{: .challenge}\n",
+    "> Now go back to the cell and use escape+M to switch the cell to Markdown and \"run\" it with shift+return. What happened and how might this be useful?\n",
+    ">\n",
+    ">>### Solution\n",
+    ">>The Python code gets treated like markdown text. The lines appear as if they are part of one contiguous paragraph. This could be useful to temporarly turn on and off cells in notebooks that get used for multiple purposes.  \n",
+    ">>     `x = 6 * 7 + 12 print(x)`\n",
     "\n",
-    "> ## Mathematics\n",
-    ">\n",
-    "> Standard Markdown (such as we're using for these notes) won't render equations,\n",
-    "> but the Notebook will.\n",
-    "> Create a new Markdown cell\n",
-    "> and enter the following:\n",
-    ">\n",
+    "> ## Equations\n",
+    "> Standard Markdown (such as we’re using for these notes) won’t render equations, but the Notebook will. Create a new Markdown cell and enter the following:\n",
     "> ~~~\n",
     "> $\\Sigma_{i=1}^{N} 2^{-i} \\approx 1$\n",
     "> ~~~\n",
-    "> {: .source}\n",
     ">\n",
-    "> (It's probably easier to copy and paste.)\n",
-    "> What does it display?\n",
-    "> What do you think the underscore `_`, circumflex `^`, and dollar sign `$` do?\n",
-    "{: .challenge}\n",
+    ">\n",
+    "> (It's probably easier to copy and paste.) What does it display? What do you think the underscore `_`, circumflex `^`, and dollar sign &#36; do ?\n",
+    ">\n",
+    ">>### Solution\n",
+    ">>The notebook shows the equation as it would be rendered from latex equation syntax. The dollar sign, &#36;, is used to tell markdown that the text in between is a latex equation. If you’re not familiar with latex, underscore, `_`, is used for subscripts and circumflex, `^`, is used for superscripts. A pair of curly braces, `{` and `}`, is used to group text together so that the statement `i=1` becomes the the subscript and `N` becomes the superscript. Similarly, `-i` is in curly braces to make the whole statement the superscript for `2`. `\\sum` and `\\approx` are latex commands for “sum over” and “approximate” symbols.\n",
     "\n",
     "[anaconda]: https://docs.continuum.io/anaconda/install\n",
+    "\n",
     "[markdown]: https://en.wikipedia.org/wiki/Markdown"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Key Points\n",
+    " * Python programs are plain text files.\n",
+    " * Use the Jupyter Notebook for editing and running Python.\n",
+    " * The Notebook has Command and Edit modes.\n",
+    " * Use the keyboard and mouse to select and edit cells.\n",
+    " * The Notebook will turn Markdown into pretty-printed documentation.\n",
+    " * Markdown does most of what HTML does."
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
