--- a/2018-02-10-Tucson/Python/05-error-messages.ipynb
+++ b/2018-02-10-Tucson/Python/05-error-messages.ipynb
@@ -4,30 +4,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "title: \"Error Messages\"\n",
-    "teaching: 5\n",
-    "exercises: 10\n",
-    "questions:\n",
-    "- \"What kind of errors can occur in programs?\"\n",
-    "- \"How can I identify errors when they occur?\"\n",
-    "objectives:\n",
-    "- \"Read a traceback and determine the file, function, and line number on which the error occurred, the type of error, and the error message.\"\n",
-    "- \"Correctly describe situations in which SyntaxError, IndentationError, NameError, IndexError, and FileNotFoundError occur.\"\n",
-    "keypoints:\n",
-    "- \"Use comments to add documentation to programs.\"\n",
-    "- \"Python reports a syntax error when it can't understand the source of a program.\"\n",
-    "- \"Indentation is meaningful in Python.\"\n",
-    "- \"Python reports a runtime error when something goes wrong while a program is executing.\"\n",
-    "- \"Fix syntax errors by reading the source code, and runtime errors by tracing the program's execution.\"\n",
-    "---\n",
+    "Error Messages\n",
+    "==\n",
+    "Teaching: 5  \n",
+    "Exercises: 10\n",
+    "\n",
+    "### Questions:\n",
+    " * What kind of errors can occur in programs?\n",
+    " * How can I identify errors when they occur?\n",
+    "\n",
+    "### Objectives:\n",
+    " * Read a traceback and determine the file, function, and line number on which the error occurred, the type of error, and the error message.\n",
+    " * Correctly describe situations in which SyntaxError, IndentationError, NameError, IndexError, and FileNotFoundError occur.\n",
+    " ---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Use comments to add documentation to programs."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# This sentence isn't executed by Python.\n",
@@ -38,8 +42,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "{: .python}\n",
-    "\n",
     "## Python reports a syntax error when it can't understand the source of a program.\n",
     "\n",
     "*   Won't even try to run the program if it can't be parsed."
@@ -47,42 +49,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-2-5e5a6d281b5a>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-2-5e5a6d281b5a>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    name = 'Feng\u001b[0m\n\u001b[1;37m                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m EOL while scanning string literal\n"
+     ]
+    }
+   ],
    "source": [
     "# Forgot to close the quotation marks around the string.\n",
     "name = 'Feng"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "{: .python}"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "SyntaxError: EOL while scanning string literal"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "{: .error}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-3-80631fb23a0d>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-3-80631fb23a0d>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    age = = 52\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# An extra '=' in the assignment.\n",
     "age = = 52"
@@ -92,32 +89,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "{: .python}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SyntaxError: invalid syntax"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "{: .error}\n",
-    "\n",
     "*   Look more closely at the error message:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-4-6b19e4adce04>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-4-6b19e4adce04>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    print(\"hello world\"\u001b[0m\n\u001b[1;37m                       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"hello world\""
    ]
@@ -126,27 +114,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "{: .python}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "  File \"<ipython-input-6-d1cc229bf815>\", line 1\n",
-    "    print (\"hello world\"\n",
-    "                        ^\n",
-    "SyntaxError: unexpected EOF while parsing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "{: .error}\n",
-    "\n",
     "*   The message indicates a problem on first line of the input (\"line 1\").\n",
     "    *   In this case the \"ipython-input\" section of the file name tells us that\n",
     "        we are working with input into IPython,\n",
@@ -167,9 +134,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-5-f65f2962bf9c>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-5-f65f2962bf9c>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    lastName=\"Smith\"\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
     "firstName=\"Jon\"\n",
     "  lastName=\"Smith\""
@@ -179,27 +155,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "{: .python}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "  File \"<ipython-input-7-f65f2962bf9c>\", line 2\n",
-    "    lastName=\"Smith\"\n",
-    "    ^\n",
-    "IndentationError: unexpected indent"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "{: .error}\n",
-    "\n",
     "*   This error can be fixed by removing the extra spaces\n",
     "    at the beginning of the second line.\n",
     "\n",
@@ -208,9 +163,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'aege' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-7a920ef0426b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m53\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mremaining\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m100\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0maege\u001b[0m \u001b[1;31m# mis-spelled 'age'\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'aege' is not defined"
+     ]
+    }
+   ],
    "source": [
     "age = 53\n",
     "remaining = 100 - aege # mis-spelled 'age'"
@@ -220,31 +187,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "{: .python}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "NameError: name 'aege' is not defined"
+    "## Fix syntax errors by reading the source and runtime errors by tracing execution.\n",
+    "\n",
+    "FIXME: diagram of where each type of error occurs.\n",
+    "\n",
+    "FIXME: this entire episode needs to move later (we can't do IndentationError yet, or \n",
+    "talk about the tracebacks until we've written functions)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "{: .error}\n",
-    "\n",
-    "## Fix syntax errors by reading the source and runtime errors by tracing execution.\n",
-    "\n",
-    "FIXME: diagram of where each type of error occurs.\n",
-    "\n",
-    "FIXME: this entire episode needs to move later (we can't do IndentationError yet, or \n",
-    "talk about the tracebacks until we've written functions).\n",
-    "\n",
     "> ## Reading Error Messages\n",
     ">\n",
     "> Read the traceback below, and identify the following:\n",
@@ -331,13 +285,42 @@
     "> ~~~\n",
     "> seasons = ['Spring', 'Summer', 'Fall', 'Winter']\n",
     "> print('My favorite season is ', seasons[4])\n",
-    "> ~~~\n",
-    "> {: .source}\n",
-    "{: .challenge}"
+    "> ~~~\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Keypoints:\n",
+    " * Use comments to add documentation to programs.\n",
+    " * Python reports a syntax error when it can't understand the source of a program.\n",
+    " * Indentation is meaningful in Python.\n",
+    " * Python reports a runtime error when something goes wrong while a program is executing.\n",
+    " * Fix syntax errors by reading the source code, and runtime errors by tracing the program's execution."
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
